tolk-tester/tests/invalid-syntax/err-3410.tolk
enum Color {
    Red,
    Green,
    Blue,
    ,
}

/**
@compilation_should_fail
@stderr expected member name, got `,`
 */
